--- a/public/main.html
+++ b/public/main.html
@@ -18,6 +18,8 @@
         <label for="seconds">:</label>
         <input type="number" class="minMax" min="0" max="59" id="seconds" name="seconds" maxlength="2"
                style="width: 25px"><br>
-        <button>Start Timer</button>
+        <button id="startButton">Start Timer</button>
+        <button id="stopButton">Stop Timer</button>
+        <script src="timer.js"></script>
     </body>
 </html>
