add data persistence

--- a/public/main.html
+++ b/public/main.html
@@ -13,9 +13,9 @@
         <h1 id="timer">0:00</h1>
 
         <label for="minutes">Time (mm:ss):</label>
-        <input type="text" class="numeric" id="minutes" name="minutes" style="width: 25px">
+        <input type="text" class="numeric persist" id="minutes" name="minutes" style="width: 25px">
         <label for="seconds">:</label>
-        <input type="text" class="numeric" id="seconds" name="seconds" maxlength="2" style="width: 25px">
+        <input type="text" class="numeric persist" id="seconds" name="seconds" maxlength="2" style="width: 25px">
         <br>
         <button id="startButton">Start Timer</button>
         <button id="stopButton">Stop Timer</button>
