add cancel timer button

--- a/public/main.html
+++ b/public/main.html
@@ -10,11 +10,9 @@
   <body>
     <h1>Welcome to PonderPrompts!</h1>
 
-    <p id="timerDisplay"></p>
-
     <!-- Displays the initial timer value-->
     <h1 id="timer">0:00</h1>
-      
+    <p id="cancelText" hidden="">Timer canceled!</p>
     <!-- Input fields for seconds, allowing values from 0 to 59, and their labels-->
     <label for="minutes">Time (mm:ss):</label>
     <input type="text" class="numeric persist" id="minutes" name="minutes" style="width: 25px">
