add questions and cycling through them

--- a/public/main.html
+++ b/public/main.html
@@ -8,19 +8,29 @@
     <title>Ponder Prompts</title>
   </head>
   <body>
-    <h1>Welcome to PonderPrompts!</h1>
+    <div id="timerPage" hidden="">
+      <h1>Welcome to PonderPrompts!</h1>
 
-    <!-- Displays the initial timer value-->
-    <h1 id="timer">0:00</h1>
-    <p id="cancelText" hidden="">Timer canceled!</p>
-    <!-- Input fields for seconds, allowing values from 0 to 59, and their labels-->
-    <label for="minutes">Time (mm:ss):</label>
-    <input type="text" class="numeric persist" id="minutes" name="minutes" style="width: 25px">
-    <label for="seconds">:</label>
-    <input type="text" class="numeric persist" id="seconds" name="seconds" maxlength="2" style="width: 25px">
-    <br>
-    <!-- start and stop buttons -->
-    <button id="startButton">Start Timer</button>
-    <button id="stopButton">Stop Timer</button>
+      <!-- Displays the initial timer value-->
+      <h1 id="timer">0:00</h1>
+      <p id="cancelText" hidden="">Timer canceled!</p>
+      <!-- Input fields for seconds, allowing values from 0 to 59, and their labels-->
+      <label for="minutes">Time (mm:ss):</label>
+      <input type="text" class="numeric persist" id="minutes" name="minutes" style="width: 25px">
+      <label for="seconds">:</label>
+      <input type="text" class="numeric persist" id="seconds" name="seconds" maxlength="2" style="width: 25px">
+      <br>
+      <!-- start and stop buttons -->
+      <button id="startButton">Start Timer</button>
+      <button id="stopButton">Stop Timer</button>
+    </div>
+    <div id="questionsPage" hidden="">
+      <h1 id="question">Insert question here</h1>
+      <label for="answer">Enter answer here:</label>
+      <br>
+      <textarea class="persist" id="answer" name="answer" cols="40" rows="7" style="resize: none"></textarea>
+      <br>
+      <button id="submitAnswerButton">Submit Answer</button>
+    </div>
   </body>
 </html>
